--- a/style.css
+++ b/style.css
@@ -5,212 +5,310 @@
  Author:         WSU University Communications
  Author URI:     https://web.wsu.edu/
  Template:       spine
- Version:        0.1.0
+ Version:        0.1.1
 */
 
-/* Old WSM styles to preserve in 2015 redesign */
+
+/* ----- Spine overrides ----- */
+
+body {
+	background: #fff!important;
+	color: #2a3033;
+	line-height: 1.5;
+}
+
+/* Magazine theme doesn't use verticle navigation */
+
+#spine {
+	display: none;
+}
+
+/* ------ Theme buildout ----- */
+
+main {
+	margin: 0 auto;
+	width: 100%;
+	max-width: 770px;
+}
+
+/* site-header */
+
+.site-header {
+	background: #2a3033;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	height: 65px;
+	position: relative;
+}
+.sh-item {
+	display: inline-block;
+}
+.site-header-issue {
+	background: orange;
+	/* this will need to be moved and based on the issue (season) color */
+	color: #fff;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	text-align: center;
+	text-transform: uppercase;
+	width: 140px;
+}
+.site-header-logo {
+	position: absolute;
+	z-index: 2;
+	right: 35px;
+	bottom: -53px;
+}
+.site-header-logo img {
+	width: 236px;
+}
+
+/* main-header */
+
+.main-header {
+	background: #5e6a71;
+	color: #fff;
+	height: 65px;
+}
+.has-featured-image .main-header {
+	background-position: center center;
+	background-size: cover;
+	height: 330px;
+}
+.main-header .header-group {
+	padding: 1.5rem 1.5rem 1rem;
+	width: 100%;
+	background: rgba(70, 78, 84, .7);
+	box-sizing: border-box;
+}
+
+/* Social sharing bar */
+
+.social-share-bar {
+	margin: 1.5rem 2rem .5rem;
+	padding: 0;
+	float: right;
+}
+.spine-social-channels .social-share-bar li a {
+	color: #8d959a;
+	font-size: 1.2rem;
+	padding: 0!important;
+}
+
+/* Article body */
+
+.article-body {
+	margin: 0 auto;
+	width: 100%;
+	max-width: 640px;
+}
+.article-body p:first-child {
+	font-family: palatino;
+	font-size: 1.3rem;
+	line-height: 1.5;
+}
+
+/* ----- Old WSM styles to preserve in 2015 redesign ----- */
+
+
 /* Utility classes */
+
 .bold {
 	font-weight: bold;
 }
-
 .italic {
 	font-style: italic;
 }
-
 .small {
 	font-size: .9em;
 	line-height: normal;
 	padding: 2px 0 5px 0;
 }
-
 .extra-bold {
 	font-weight: bolder;
 }
-
 .larger {
 	font-size: larger;
 }
-
 .uppercase {
 	text-transform: uppercase;
 }
-
 .smallcaps {
 	font-variant: small-caps;
 }
-
 .indent {
 	margin: 0 50px;
 }
-
 .right {
 	float: right;
 }
-
 .left {
 	float: left;
 }
-
 .crimson-border {
 	border: 1px solid #9b2437;
 	padding: 10px;
 }
-
 .middle {
 	vertical-align: middle;
 }
-
 .small-box {
 	margin: 0 10px 10px 10px;
 	max-width: 250px;
 }
-
 .small-box img {
 	max-width: 100%;
 }
-
 .image340 {
 	max-width: 340px;
 	height: auto;
 }
 
 /* COLORS */
-.color1, .red {
+
+.color1,
+.red {
 	color: #c60c30;
 }
-
-.color2, .crimson {
+.color2,
+.crimson {
 	color: #9b2437;
 }
-
-.color3, .wsm-gray {
+.color3,
+.wsm-gray {
 	color: #667178;
 }
-
-.color4, .light-gray {
+.color4,
+.light-gray {
 	color: #798389;
 }
-
-.color5, .lighter-gray {
+.color5,
+.lighter-gray {
 	color: #aab1b4;
 }
-
 .dark-gray {
 	color: #1d2124;
 }
-
-.color6, .green {
+.color6,
+.green {
 	color: #bfc720;
 }
-
-.color7, .yellow {
+.color7,
+.yellow {
 	color: #fec34e;
 }
-
-.color8, .winter-blue {
+.color8,
+.winter-blue {
 	color: #194f78;
 }
-
-.color9, .winter-blue-light {
+.color9,
+.winter-blue-light {
 	color: #5f96bf;
 }
-
-.color10, .beige {
+.color10,
+.beige {
 	color: #e4dac1;
 }
-
-.color11, .aqua {
+.color11,
+.aqua {
 	color: #3cb6ce;
 }
-
-.color12, .orange {
+.color12,
+.orange {
 	color: #ef9234;
 }
-
-.color13, .teal {
+.color13,
+.teal {
 	color: #066f68;
 }
-
-.color14, .warm-gray-light {
+.color14,
+.warm-gray-light {
 	color: #65645c;
 }
-
-.color15, .warm-gray-medium {
+.color15,
+.warm-gray-medium {
 	color: #262b2d;
 }
-
-.color17, .color16, .warm-gray-dark {
+.color17,
+.color16,
+.warm-gray-dark {
 	color: #505353;
 }
-
-.color18, .warm-gray-darkest {
+.color18,
+.warm-gray-darkest {
 	color: #464845;
 }
-
-.color19, .white {
+.color19,
+.white {
 	color: #FFF;
 }
-
-.color20, .black {
+.color20,
+.black {
 	color: #000;
 }
-
-.fall, .Fall {
+.fall,
+.Fall {
 	color: #EF9234;
 }
-
 .winter {
 	color: #194F78;
 }
-
-.winter-light, .Winter {
+.winter-light,
+.Winter {
 	color: #5F96BF;
 }
-
-.spring, .Spring {
+.spring,
+.Spring {
 	color: #BFC720;
 }
-
-.summer, .Summer {
+.summer,
+.Summer {
 	color: #FEC34E;
 }
-
 .fall-bg {
 	background: #ea8d2f;
 }
-
 .winter-bg {
 	background: #194F78;
 }
-
 .spring-bg {
 	background: #b4bb25;
 }
-
 .summer-bg {
 	background: #e9ac3b;
 }
 
 /* Inline text styles */
+
 .section-head {
 	text-transform: uppercase;
 	font-weight: bold;
 	color: #9b2437;
 }
-
 .space-line-above {
 	margin-top: 10px;
 }
-
 .space-line-below {
 	margin-bottom: 10px;
 }
-
 .top-space {
 	margin-top: 5px;
 }
-
 .bottom-space {
 	margin-bottom: 5px;
 }
+
+/* ----- END OF - Old WSM styles to preserve in 2015 redesign ----- */
