--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  Author:         WSU University Communications
  Author URI:     https://web.wsu.edu/
  Template:       spine
- Version:        0.6.15
+ Version:        0.6.16
 */
 
 
@@ -101,6 +101,7 @@ figcaption.wp-caption-text {
 }
 .gallery figcaption.wp-caption-text {
 	top: 0;
+	bottom: auto;
 }
 
 /* ----- set season color for all imheriting elements ----- */
