--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  Author:         WSU University Communications
  Author URI:     https://web.wsu.edu/
  Template:       spine
- Version:        0.6.16
+ Version:        0.6.17
 */
 
 
@@ -99,10 +99,7 @@ figcaption.wp-caption-text {
 	box-sizing: border-box;
 	font-size: .8rem;
 }
-.gallery figcaption.wp-caption-text {
-	top: 0;
-	bottom: auto;
-}
+.gallery figcaption.wp-caption-text {}
 
 /* ----- set season color for all imheriting elements ----- */
 
