--- a/style.css
+++ b/style.css
@@ -605,6 +605,12 @@ figure.article-thumbnail img {
 	padding-top: 0;
 	top: 0;
 }
+
+.no-thumbnail .home-headline-head-wrapper {
+	padding-left: 10px;
+	padding-right: calc(33% + 10px);
+}
+
 .secondary-articles .home-subtitle {
 	color: #2a3033;
 	display: block;
