--- a/style.css
+++ b/style.css
@@ -343,20 +343,37 @@ blockquote {
 	position: relative;
 	width: 100%;
 	max-width: calc(100% - 200px);
-	bottom: -3.1rem;
+	bottom: -3.15rem;
 }
 
 .archive .main-header .header-group,
 .page .main-header .header-group,
 .search .main-header .header-group {
-	bottom: -1.8rem;
+	bottom: -1.85rem;
 }
 
 .has-featured-image .main-header .header-group {
-	background: rgba(0, 0, 0, .7);
-	color: #fff;
+	overflow: hidden;
+	padding-top: 1.25rem;
 	position: absolute;
-	bottom: 0;
+}
+
+.has-featured-image .main-header .header-group:before {
+	content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: -3.15rem;
+    background: rgba(0,0,0,0.7);
+    left: 0;
+}
+
+.page.has-featured-image .main-header .header-group:before {
+	top: -1.85rem;
+}
+
+.has-featured-image .main-header .header-group h1 {
+	position: relative;
 }
 
 .page .main-header cite {
@@ -367,14 +384,13 @@ blockquote {
 	color: #981e32;
 }
 
-.has-featured-image .main-header a:hover {
-	color: #fff;
-}
-
 /* Social sharing bar */
 .spine-social-channels {
 	position: relative;
 	height: 55px;
+
+	margin-left: auto;
+	width: 19.2rem;
 }
 
 .social-share-bar {
@@ -925,6 +941,14 @@ h2 + .article-section {
 		margin-top: 0;
 	}
 
+	.main-header .header-group {
+		bottom: -3.45rem;
+	}
+
+	.has-featured-image .main-header .header-group:before {
+    	top: -3.45rem;
+	}
+
 	.home .halves .column,
 	.single-wsu_magazine_issue .halves .column {
 		padding: 0;
@@ -961,12 +985,22 @@ h2 + .article-section {
 	}
 
 	.main-header .header-group {
-		bottom: auto;
+		/*bottom: auto;*/
 		max-width: 100%;
+	}
+
+	.spine-social-channels {
+		height: 25px;
+		margin: 4.45rem auto 2rem;
+		width: 100%;
 	}
 
 	.social-share-bar {
 		float: none;
+	}
+
+	.social-share-bar li:first-of-type {
+		margin-left: 0;
 	}
 
 	.home section:first-child .one a > div,
